[project]
name = "danta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "langchain-tavily>=0.2.7",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "commitizen>=3.0.0",
    "pre-commit>=3.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
